--- a/link/index.html
+++ b/link/index.html
@@ -16,23 +16,28 @@
         <div class="row">
             <div class="col-12">
                 <div class="itemLink">
-                    <div id="top" class="itemTitle">Top</div>
-                    <a href="https://www.marketwatch.com">
-                        <figure>
-                            <img src="./resources/images/marketwatch.png" alt="marketwatch Icon">
-                            <figcaption>Marketwatch</figcaption>
-                        </figure>
-                    </a>
                     <a href="https://drudgereport.com">
                         <figure>
                             <img src="./resources/images/drudge.png" alt="Drudge Icon">
                             <figcaption>Drudge</figcaption>
                         </figure>
                     </a>
+                    <a href="https://www.allsides.com">
+                        <figure>
+                            <img src="./resources/images/allsides.png" alt="allsides Icon">
+                            <figcaption>All Sides</figcaption>
+                        </figure>
+                    </a>
                     <a href="http://komonews.com">
                         <figure>
                             <img src="./resources/images/komo.png" alt="Komo News Icon">
                             <figcaption>Komo</figcaption>
+                        </figure>
+                    </a>
+                    <a href="https://mynorthwest.com/">
+                        <figure>
+                            <img src="./resources/images/mynorthwest.png" alt="My Northwest Icon">
+                            <figcaption>My Northwest</figcaption>
                         </figure>
                     </a>
                     <a href="https://www.reddit.com">
@@ -45,6 +50,24 @@
                         <figure>
                             <img src="./resources/images/instagram.png" alt="Instagram Icon">
                             <figcaption>Instagram</figcaption>
+                        </figure>
+                    </a>
+                    <a href="https://www.marketwatch.com">
+                        <figure>
+                            <img src="./resources/images/marketwatch.png" alt="marketwatch Icon">
+                            <figcaption>Marketwatch</figcaption>
+                        </figure>
+                    </a>
+                    <a href="https://www.pinterest.com">
+                        <figure>
+                            <img src="./resources/images/pinterest.png" alt="Pinterest Icon">
+                            <figcaption>Pinterest</figcaption>
+                        </figure>
+                    </a>
+                    <a href="https://www.youtube.com/">
+                        <figure>
+                            <img src="./resources/images/youtube.png" alt="youtube Icon">
+                            <figcaption>YouTube</figcaption>
                         </figure>
                     </a>
                     <div class="space"></div>
@@ -60,17 +83,74 @@
                             <figcaption>Bible</figcaption>
                         </figure>
                     </a>
-                     <a href="https://www.vocabulary.com">
+                    <a href="https://www.vocabulary.com">
                         <figure>
                             <img src="./resources/images/vocabulary.png" alt="Vocabulary Icon">
                             <figcaption>Vocabulary</figcaption>
                         </figure>
                     </a>
-                </div>
-            </div>
-            <div class="col-12">
-                <div class="itemLink">
-                    <div id="top" class="itemTitle">Top</div>
+                    <a href="https://www.codecademy.com">
+                        <figure>
+                            <img src="./resources/images/codecademy.png" alt="codecademy Icon">
+                            <figcaption>codecademy</figcaption>
+                        </figure>
+                    </a>
+                    <a href="https://www.quizlet.com">
+                        <figure>
+                            <img src="./resources/images/quizlet.png" alt="quizlet Icon">
+                            <figcaption>Quizlet</figcaption>
+                        </figure>
+                    </a>
+                    <div class="space"></div>
+                    <a href="https://192.168.1.222">
+                        <figure>
+                            <img src="./resources/images/qnap.png" alt="QNAP Icon">
+                            <figcaption>qnap</figcaption>
+                        </figure>
+                    </a>
+                    <a href="https://www.github.com">
+                        <figure>
+                            <img src="./resources/images/github.png" alt="github Icon">
+                            <figcaption>gitHub</figcaption>
+                        </figure>
+                    </a>
+                    <a href="https://www.instapaper.com">
+                        <figure>
+                            <img src="./resources/images/instapaper.png" alt="instapaper Icon">
+                            <figcaption>instapaper</figcaption>
+                        </figure>
+                    </a>
+                    <a href="https://www.icloud.com/">
+                        <figure>
+                            <img src="./resources/images/iCloud.png" alt="icloud Icon">
+                            <figcaption>iCloud</figcaption>
+                        </figure>
+                    </a>
+                    <a href="https://www.flickr.com/photos/karl_s_johnson/">
+                        <figure>
+                            <img src="./resources/images/flickr.png" alt="flickr Icon">
+                            <figcaption>flickr</figcaption>
+                        </figure>
+                    </a>
+                    <a href="https://www.pinboard.in">
+                        <figure>
+                            <img src="./resources/images/pinboard.png" alt="Pinboard Icon">
+                            <figcaption>Pinboard</figcaption>
+                        </figure>
+                    </a>
+                    <a href="https://www.grammarly.com">
+                        <figure>
+                            <img src="./resources/images/grammarly.png" alt="grammarly Icon">
+                            <figcaption>Grammarly</figcaption>
+                        </figure>
+                    </a>
+                    <a href="https://www.getcloudapp.com">
+                        <figure>
+                            <img src="./resources/images/cloudapp.png" alt="Cloud app Icon">
+                            <figcaption>CloudApp</figcaption>
+                        </figure>
+                    </a>
+                     <div class="space"></div>
                     <a href="https://www.amazon.com/">
                         <figure>
                             <img src="./resources/images/amazonstore.png" alt="Amazon Icon">
@@ -83,12 +163,25 @@
                             <figcaption>aVideo</figcaption>
                         </figure>
                     </a>
-                    <a href="https://www.github.com">
+                    <a href="https://www.rei.com/">
                         <figure>
-                            <img src="./resources/images/github.png" alt="github Icon">
-                            <figcaption>gitHub</figcaption>
+                            <img src="./resources/images/rei.png" alt="REI Icon">
+                            <figcaption>REI</figcaption>
                         </figure>
                     </a>
+                    <a href="https://www.newegg.com/">
+                        <figure>
+                            <img src="./resources/images/newegg.png" alt="newegg Icon">
+                            <figcaption>Newegg</figcaption>
+                        </figure>
+                    </a>
+                    <a href="https://www.udemy.com/">
+                        <figure>
+                            <img src="./resources/images/udemy.png" alt="Udemy Icon">
+                            <figcaption>Udemy</figcaption>
+                        </figure>
+                    </a>                 
+                    <div class="space"></div>
                     <a href="https://www.google.com/maps">
                         <figure>
                             <img src="./resources/images/gmaps.png" alt="Goggle Maps Icon">
@@ -101,48 +194,7 @@
                             <figcaption>Wikipedia</figcaption>
                         </figure>
                     </a>
-                     <a href="https://www.icloud.com/">
-                        <figure>
-                            <img src="./resources/images/iCloud.png" alt="icloud Icon">
-                            <figcaption>iCloud</figcaption>
-                        </figure>
-                    </a>
-                    <a href="https://www.pinboard.in">
-                        <figure>
-                            <img src="./resources/images/pinboard.png" alt="Pinboard Icon">
-                            <figcaption>Pinboard</figcaption>
-                        </figure>
-                    </a>
-                    <a href="https://www.quizlet.com">
-                        <figure>
-                            <img src="./resources/images/quizlet.png" alt="quizlet Icon">
-                            <figcaption>Quizlet</figcaption>
-                        </figure>
-                    </a>
-               </div>
-            </div>
-            <div class="col-12">
-                <div class="itemLink">
-                    <div id="top" class="itemTitle">Media</div>
-                     <a href="https://www.pinterest.com">
-                        <figure>
-                            <img src="./resources/images/pinterest.png" alt="Pinterest Icon">
-                            <figcaption>Pinterest</figcaption>
-                        </figure>
-                    </a>
-                    <a href="https://www.youtube.com/">
-                        <figure>
-                            <img src="./resources/images/youtube.png" alt="youtube Icon">
-                            <figcaption>YouTube</figcaption>
-                        </figure>
-                    </a>
-                   <a href="https://www.flickr.com/photos/karl_s_johnson/">
-                        <figure>
-                            <img src="./resources/images/flickr.png" alt="flickr Icon">
-                            <figcaption>flickr</figcaption>
-                        </figure>
-                    </a>
-                     <a href="https://deviantart.com">
+                    <a href="https://deviantart.com">
                         <figure>
                             <img src="./resources/images/deviantart.png" alt="Deviantart Icon">
                             <figcaption>Deviantart</figcaption>
@@ -160,73 +212,13 @@
                             <figcaption>Vimeo</figcaption>
                         </figure>
                     </a>
-                   <a href="https://medium.com">
-                        <figure>
-                            <img src="./resources/images/medium.png" alt="medium Icon">
-                            <figcaption>Medium</figcaption>
-                        </figure>
-                    </a>
-               </div>
-            </div>
-            <div class="col-12">
-                <div class="itemLink">
-                    <div id="topProgramming" class="itemTitle">Services</div>
-                    <a href="https://www.dropbox.com/home">
-                        <figure>
-                            <img src="./resources/images/dropbox.png" alt="Dropbox Icon">
-                            <figcaption>Dropbox</figcaption>
-                        </figure>
-                    </a>
-                     <a href="https://www.gitlab.com">
-                        <figure>
-                            <img src="./resources/images/gitlab.png" alt="gitLab Icon">
-                            <figcaption>gitLab</figcaption>
-                        </figure>
-                    </a>
-                   <a href="https://ifttt.com/">
-                        <figure>
-                            <img src="./resources/images/ifttt.png" alt="ifttt Icon">
-                            <figcaption>IFTTT</figcaption>
-                        </figure>
-                    </a>
-                    <a href="https://www.getcloudapp.com">
-                        <figure>
-                            <img src="./resources/images/cloudapp.png" alt="Cloud app Icon">
-                            <figcaption>CloudApp</figcaption>
-                        </figure>
-                    </a>
-                    <div class="space"></div>
-                    <a href="https://www.udemy.com/">
-                        <figure>
-                            <img src="./resources/images/udemy.png" alt="Udemy Icon">
-                            <figcaption>Udemy</figcaption>
-                        </figure>
-                    </a>                 
                     <a href="https://kcls.overdrive.com">
                         <figure>
                             <img src="./resources/images/kcls.png" alt="kcls.overdrive Icon">
                             <figcaption>KCLS-Online</figcaption>
                         </figure>
                     </a>
-                    <a href="https://www.teamsnap.com">
-                        <figure>
-                            <img src="./resources/images/TeamSnap.png" alt="TeamSnap Icon">
-                            <figcaption>TeamSnap</figcaption>
-                        </figure>
-                    </a>
-                    <a href="https://www.freecodecamp.com">
-                        <figure>
-                            <img src="./resources/images/freecodecamp.png" alt="Free Code Camp Icon">
-                            <figcaption>FCC</figcaption>
-                        </figure>
-                    </a>
-
-
-                </div>
-            </div>
-            <div class="col-12">
-                <div class="itemLink">
-                    <div id="topProgramming" class="itemTitle">Programming</div>
+                    <div class="space"></div>
                     <a href="https://www.w3schools.com/">
                         <figure>
                             <img src="./resources/images/w3school.png" alt="w3schools Icon">
@@ -257,7 +249,6 @@
                             <figcaption>GFonts</figcaption>
                         </figure>
                     </a>
-                    <div class="space"></div>
                     <a href="https://code.visualstudio.com">
                         <figure>
                             <img src="./resources/images/vscode.png" alt="VS Code Icon">
