--- a/link/index.html
+++ b/link/index.html
@@ -22,6 +22,12 @@
                             <figcaption>Drudge</figcaption>
                         </figure>
                     </a>
+                    <a href="https://news.google.com">
+                        <figure>
+                            <img src="./resources/images/gnews.png" alt="Google News Icon">
+                            <figcaption>GNews</figcaption>
+                        </figure>
+                    </a>
                     <a href="https://www.allsides.com">
                         <figure>
                             <img src="./resources/images/allsides.png" alt="allsides Icon">
