switch to msn news

--- a/link/index.html
+++ b/link/index.html
@@ -22,10 +22,10 @@
                             <figcaption>Drudge</figcaption>
                         </figure>
                     </a>
-                    <a href="https://news.google.com">
+                    <a href="https://www.msn.com/en-us/news">
                         <figure>
-                            <img src="./resources/images/gnews.png" alt="Google News Icon">
-                            <figcaption>GNews</figcaption>
+                            <img src="./resources/images/msn.png" alt="MSN News Icon">
+                            <figcaption>MSN News</figcaption>
                         </figure>
                     </a>
                     <a href="https://www.allsides.com">
