--- a/link/index.html
+++ b/link/index.html
@@ -107,6 +107,12 @@
                             <figcaption>Quizlet</figcaption>
                         </figure>
                     </a>
+                    <a href="about:profiles">
+                        <figure>
+                            <img src="./resources/images/ffprofiles.png" alt="FF Profile Icon">
+                            <figcaption>Profiles</figcaption>
+                        </figure>
+                    </a>
                     <div class="space"></div>
                     <a href="https://192.168.1.222">
                         <figure>
