--- a/link/index.html
+++ b/link/index.html
@@ -22,6 +22,12 @@
                             <figcaption>Drudge</figcaption>
                         </figure>
                     </a>
+                    <a href="https://www.whatfinger.com/">
+                        <figure>
+                            <img src="./resources/images/wf.png" alt="whatfinger Icon">
+                            <figcaption>whatfinger</figcaption>
+                        </figure>
+                    </a>
                     <a href="https://www.msn.com/en-us/news">
                         <figure>
                             <img src="./resources/images/msn.png" alt="MSN News Icon">
