--- a/link/index.html
+++ b/link/index.html
@@ -22,12 +22,6 @@
                             <figcaption>Drudge</figcaption>
                         </figure>
                     </a>
-                    <a href="https://www.whatfinger.com/">
-                        <figure>
-                            <img src="./resources/images/wf.png" alt="whatfinger Icon">
-                            <figcaption>whatfinger</figcaption>
-                        </figure>
-                    </a>
                     <a href="https://www.msn.com/en-us/news">
                         <figure>
                             <img src="./resources/images/msn.png" alt="MSN News Icon">
@@ -58,28 +52,10 @@
                             <figcaption>reddit</figcaption>
                         </figure>
                     </a>
-                    <a href="https://www.instagram.com">
-                        <figure>
-                            <img src="./resources/images/instagram.png" alt="Instagram Icon">
-                            <figcaption>Instagram</figcaption>
-                        </figure>
-                    </a>
                     <a href="https://www.marketwatch.com">
                         <figure>
                             <img src="./resources/images/marketwatch.png" alt="marketwatch Icon">
                             <figcaption>Marketwatch</figcaption>
-                        </figure>
-                    </a>
-                    <a href="https://www.pinterest.com">
-                        <figure>
-                            <img src="./resources/images/pinterest.png" alt="Pinterest Icon">
-                            <figcaption>Pinterest</figcaption>
-                        </figure>
-                    </a>
-                    <a href="https://www.youtube.com/">
-                        <figure>
-                            <img src="./resources/images/youtube.png" alt="youtube Icon">
-                            <figcaption>YouTube</figcaption>
                         </figure>
                     </a>
                     <div class="space"></div>
@@ -87,6 +63,12 @@
                         <figure>
                             <img src="./resources/images/duolingo.png" alt="duolingo Icon">
                             <figcaption>duolingo</figcaption>
+                        </figure>
+                    </a>
+                    <a href="https://www.toggl.com/">
+                        <figure>
+                            <img src="./resources/images/toggl.png" alt="Toggl Icon">
+                            <figcaption>Toggl</figcaption>
                         </figure>
                     </a>
                     <a href="https://www.bible.com">
@@ -114,10 +96,22 @@
                         </figure>
                     </a>
                     <div class="space"></div>
-                    <a href="https://192.168.1.222">
+                    <a href="https://www.instagram.com">
                         <figure>
-                            <img src="./resources/images/qnap.png" alt="QNAP Icon">
-                            <figcaption>qnap</figcaption>
+                            <img src="./resources/images/instagram.png" alt="Instagram Icon">
+                            <figcaption>Instagram</figcaption>
+                        </figure>
+                    </a>
+                    <a href="https://www.pinterest.com">
+                        <figure>
+                            <img src="./resources/images/pinterest.png" alt="Pinterest Icon">
+                            <figcaption>Pinterest</figcaption>
+                        </figure>
+                    </a>
+                    <a href="https://www.youtube.com/">
+                        <figure>
+                            <img src="./resources/images/youtube.png" alt="youtube Icon">
+                            <figcaption>YouTube</figcaption>
                         </figure>
                     </a>
                     <a href="https://www.github.com">
@@ -144,6 +138,13 @@
                             <figcaption>flickr</figcaption>
                         </figure>
                     </a>
+                    <div class="space"></div>
+                    <a href="https://192.168.1.222">
+                        <figure>
+                            <img src="./resources/images/qnap.png" alt="QNAP Icon">
+                            <figcaption>qnap</figcaption>
+                        </figure>
+                    </a>
                     <a href="https://www.pinboard.in">
                         <figure>
                             <img src="./resources/images/pinboard.png" alt="Pinboard Icon">
@@ -154,6 +155,12 @@
                         <figure>
                             <img src="./resources/images/grammarly.png" alt="grammarly Icon">
                             <figcaption>Grammarly</figcaption>
+                        </figure>
+                    </a>
+                    <a href="https://www.docker.com/products/docker-hub">
+                        <figure>
+                            <img src="./resources/images/docker.png" alt="Docker Icon">
+                            <figcaption>Docker Hub</figcaption>
                         </figure>
                     </a>
                     <a href="https://www.getcloudapp.com">
