update with homer server links

--- a/link/index.html
+++ b/link/index.html
@@ -290,6 +290,32 @@
             </div>
         </div>
     </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <div class="itemLink">
+                    <a href="http://192.168.1.111:9000">
+                        <figure>
+                            <img src="./resources/images/hsPortainer.png" alt="Portainer">
+                            <figcaption>hsPortainer</figcaption>
+                        </figure>
+                        <a href="http://192.168.1.111:9001">
+                            <figure>
+                                <img src="./resources/images/hsOrganizr.png" alt="Oragnizr">
+                                <figcaption>hsOragnizr</figcaption>
+                            </figure>
+                        </a>
+                        <a href="http://192.168.1.111:32400/web/index.html">
+                            <figure>
+                                <img src="./resources/images/hsPlex.png" alt="Plex">
+                                <figcaption>hsPlex</figcaption>
+                            </figure>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    
 </body>
 
 </html>
