--- a/link/index.html
+++ b/link/index.html
@@ -28,53 +28,16 @@
                             <figcaption>MSN News</figcaption>
                         </figure>
                     </a>
-                    <a href="https://www.allsides.com">
-                        <figure>
-                            <img src="./resources/images/allsides.png" alt="allsides Icon">
-                            <figcaption>All Sides</figcaption>
-                        </figure>
-                    </a>
-                    <a href="http://komonews.com">
-                        <figure>
-                            <img src="./resources/images/komo.png" alt="Komo News Icon">
-                            <figcaption>Komo</figcaption>
-                        </figure>
-                    </a>
-                    <a href="https://mynorthwest.com/">
-                        <figure>
-                            <img src="./resources/images/mynorthwest.png" alt="My Northwest Icon">
-                            <figcaption>My Northwest</figcaption>
-                        </figure>
-                    </a>
-                    <a href="https://www.reddit.com">
-                        <figure>
-                            <img src="./resources/images/reddit.png" alt="reddit Icon">
-                            <figcaption>reddit</figcaption>
-                        </figure>
-                    </a>
-                    <a href="https://www.marketwatch.com">
-                        <figure>
-                            <img src="./resources/images/marketwatch.png" alt="marketwatch Icon">
-                            <figcaption>Marketwatch</figcaption>
-                        </figure>
-                    </a>
-                    <div class="space"></div>
-                    <a href="https://www.duolingo.com">
-                        <figure>
-                            <img src="./resources/images/duolingo.png" alt="duolingo Icon">
-                            <figcaption>duolingo</figcaption>
-                        </figure>
-                    </a>
-                    <a href="https://www.toggl.com/">
-                        <figure>
-                            <img src="./resources/images/toggl.png" alt="Toggl Icon">
-                            <figcaption>Toggl</figcaption>
-                        </figure>
-                    </a>
                     <a href="https://www.bible.com">
                         <figure>
                             <img src="./resources/images/bible.png" alt="bibleIcon">
                             <figcaption>Bible</figcaption>
+                        </figure>
+                    </a>
+                    <a href="https://www.duolingo.com">
+                        <figure>
+                            <img src="./resources/images/duolingo.png" alt="duolingo Icon">
+                            <figcaption>duolingo</figcaption>
                         </figure>
                     </a>
                     <a href="https://www.vocabulary.com">
@@ -89,19 +52,25 @@
                             <figcaption>codecademy</figcaption>
                         </figure>
                     </a>
+                    <a href="https://www.khanacademy.org">
+                        <figure>
+                            <img src="./resources/images/khan.png" alt="khanacademy Icon">
+                            <figcaption>Khan Academy</figcaption>
+                        </figure>
+                    </a>
                     <a href="https://www.quizlet.com">
                         <figure>
                             <img src="./resources/images/quizlet.png" alt="quizlet Icon">
                             <figcaption>Quizlet</figcaption>
                         </figure>
                     </a>
-                    <div class="space"></div>
                     <a href="https://www.instagram.com">
                         <figure>
                             <img src="./resources/images/instagram.png" alt="Instagram Icon">
                             <figcaption>Instagram</figcaption>
                         </figure>
                     </a>
+                    <div class="space"></div>
                     <a href="https://www.pinterest.com">
                         <figure>
                             <img src="./resources/images/pinterest.png" alt="Pinterest Icon">
@@ -120,12 +89,6 @@
                             <figcaption>gitHub</figcaption>
                         </figure>
                     </a>
-                    <a href="https://www.instapaper.com">
-                        <figure>
-                            <img src="./resources/images/instapaper.png" alt="instapaper Icon">
-                            <figcaption>instapaper</figcaption>
-                        </figure>
-                    </a>
                     <a href="https://www.icloud.com/">
                         <figure>
                             <img src="./resources/images/iCloud.png" alt="icloud Icon">
@@ -138,11 +101,10 @@
                             <figcaption>flickr</figcaption>
                         </figure>
                     </a>
-                    <div class="space"></div>
-                    <a href="https://192.168.1.222">
+                    <a href="https://www.instapaper.com">
                         <figure>
-                            <img src="./resources/images/qnap.png" alt="QNAP Icon">
-                            <figcaption>qnap</figcaption>
+                            <img src="./resources/images/instapaper.png" alt="instapaper Icon">
+                            <figcaption>instapaper</figcaption>
                         </figure>
                     </a>
                     <a href="https://www.pinboard.in">
@@ -151,6 +113,7 @@
                             <figcaption>Pinboard</figcaption>
                         </figure>
                     </a>
+                    <div class="space"></div>
                     <a href="https://www.grammarly.com">
                         <figure>
                             <img src="./resources/images/grammarly.png" alt="grammarly Icon">
