--- a/link/index.html
+++ b/link/index.html
@@ -28,6 +28,12 @@
                             <figcaption>MSN News</figcaption>
                         </figure>
                     </a>
+                    <a href="https://www.reddit.com">
+                        <figure>
+                            <img src="./resources/images/reddit.png" alt="reddit Icon">
+                            <figcaption>reddit</figcaption>
+                        </figure>
+                    </a>
                     <a href="https://www.bible.com">
                         <figure>
                             <img src="./resources/images/bible.png" alt="bibleIcon">
