--- a/link/index.html
+++ b/link/index.html
@@ -34,6 +34,13 @@
                             <figcaption>reddit</figcaption>
                         </figure>
                     </a>
+                    <a href="https://www.instagram.com">
+                        <figure>
+                            <img src="./resources/images/instagram.png" alt="Instagram Icon">
+                            <figcaption>Instagram</figcaption>
+                        </figure>
+                    </a>
+                    <div class="space"></div>
                     <a href="https://www.bible.com">
                         <figure>
                             <img src="./resources/images/bible.png" alt="bibleIcon">
@@ -68,12 +75,6 @@
                         <figure>
                             <img src="./resources/images/quizlet.png" alt="quizlet Icon">
                             <figcaption>Quizlet</figcaption>
-                        </figure>
-                    </a>
-                    <a href="https://www.instagram.com">
-                        <figure>
-                            <img src="./resources/images/instagram.png" alt="Instagram Icon">
-                            <figcaption>Instagram</figcaption>
                         </figure>
                     </a>
                     <div class="space"></div>
