Feb2020 update - add twitter, nextdoor

--- a/link/index.html
+++ b/link/index.html
@@ -22,34 +22,16 @@
                             <figcaption>Drudge</figcaption>
                         </figure>
                     </a>
-                    <a href="https://mynorthwest.com/">
+                    <a href="https://twitter.com/">
                         <figure>
-                            <img src="images/mynorthwest.png" alt="mynorthwest Icon">
-                            <figcaption>MyNorthwest</figcaption>
-                        </figure>
-                    </a>
-                    <a href="https://www.issaquahreporter.com/news/">
-                        <figure>
-                            <img src="images/issaquahreporter.png" alt="Issaquah Reporter Icon">
-                            <figcaption>Issaquah Reporter</figcaption>
+                            <img src="images/twitter.png" alt="twitter Icon">
+                            <figcaption>twitter</figcaption>
                         </figure>
                     </a>
                     <a href="https://www.accuweather.com/en/us/issaquah/98027/weather-forecast/346384">
                         <figure>
                             <img src="images/accuweather.png" alt="accuweather Icon">
                             <figcaption>AccuWeather</figcaption>
-                        </figure>
-                    </a>
-                    <a href="https://www.wunderground.com/weather/us/wa/issaquah/KWAISSAQ5">
-                        <figure>
-                            <img src="images/wunderground.png" alt="wunderground Icon">
-                            <figcaption>wunderground</figcaption>
-                        </figure>
-                    </a>
-                    <a href="https://www.msn.com/en-us/news/local">
-                        <figure>
-                            <img src="images/msn.png" alt="MSN News Icon">
-                            <figcaption>MSN News</figcaption>
                         </figure>
                     </a>
                     <a href="https://www.reddit.com">
@@ -68,6 +50,12 @@
                         <figure>
                             <img src="images/pinterest.png" alt="Pinterest Icon">
                             <figcaption>Pinterest</figcaption>
+                        </figure>
+                    </a>
+                    <a href="https://nextdoor.com">
+                        <figure>
+                            <img src="images/nextdoor.png" alt="nextdoor Icon">
+                            <figcaption>nextdoor</figcaption>
                         </figure>
                     </a>
                     <a href="https://www.youtube.com/">
@@ -126,10 +114,10 @@
                             <figcaption>iCloud</figcaption>
                         </figure>
                     </a>
-                    <a href="https://www.flickr.com/photos/karl_s_johnson/">
+                    <a href="https://www.ifttt.com">
                         <figure>
-                            <img src="images/flickr.png" alt="flickr Icon">
-                            <figcaption>flickr</figcaption>
+                            <img src="images/ifttt.png" alt="ifttt Icon">
+                            <figcaption>ifttt</figcaption>
                         </figure>
                     </a>
                     <a href="https://www.pinboard.in">
@@ -137,12 +125,6 @@
                             <img src="images/pinboard.png" alt="Pinboard Icon">
                             <figcaption>Pinboard</figcaption>
                         </figure>
-                    </a>
-                    <a href="https://www.grammarly.com">
-                        <figure>
-                            <img src="images/grammarly.png" alt="grammarly Icon">
-                            <figcaption>Grammarly</figcaption>
-                        </figure>   
                     </a>
                     <a href="https://app.plex.tv/desktop#">
                         <figure>
@@ -159,13 +141,13 @@
                      <div class="space"></div>
                     <a href="https://www.amazon.com/">
                         <figure>
-                            <img src="images/amazonstore.png" alt="Amazon Icon">
+                            <img src="images/amazon.png" alt="Amazon Icon">
                             <figcaption>Amazon</figcaption>
                         </figure>
                     </a>
                     <a href="https://www.amazon.com/b/ref=lp_2676882011_nav_shopall_aiv_piv?rh=i%3Aprime-instant-video%2Cn%3A2676882011&ie=UTF8&node=2676882011">
                         <figure>
-                            <img src="images/amazonvideo2.png" alt="Amazon Video Icon">
+                            <img src="images/amazonvideo.png" alt="Amazon Video Icon">
                             <figcaption>aVideo</figcaption>
                         </figure>
                     </a>
@@ -231,6 +213,12 @@
                             <figcaption>W3school</figcaption>
                         </figure>
                     </a>
+                    <a href="https://developer.mozilla.org/en-US/">
+                        <figure>
+                            <img src="images/mdn.png" alt="mdn Icon">
+                            <figcaption>MDN</figcaption>
+                        </figure>
+                    </a>
                     <a href="http://cssreference.io/">
                         <figure>
                             <img src="images/css-reference-icon.png" alt="CSS Reference Icon">
@@ -271,6 +259,12 @@
                         <figure>
                             <img src="images/python.png" alt="Python Icon">
                             <figcaption>Python</figcaption>
+                        </figure>
+                    </a>
+                    <a href="https://shd101wyy.github.io/markdown-preview-enhanced/#/">
+                        <figure>
+                            <img src="images/mpe.png" alt="MPE Icon">
+                            <figcaption>MPE</figcaption>
                         </figure>
                     </a>
                 </div>
