Link Icon Changes

--- a/link/index.html
+++ b/link/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="css/reset.css" type="text/css" rel="stylesheet">
     <link href="css/style.css" type="text/css" rel="stylesheet">
-    <title>Mountain View</title>
+    <title>Homepage</title>
 </head>
 
 <body>
@@ -16,10 +16,10 @@
         <div class="row">
             <div class="col-12">
                 <div class="itemLink">
-                    <a href="https://drudgereport.com">
+                  <a href="https://www.coingecko.com/en">
                         <figure>
-                            <img src="images/drudge.png" alt="Drudge Icon">
-                            <figcaption>Drudge</figcaption>
+                            <img src="images/coingecko.png" alt="coingecko Icon">
+                            <figcaption>coingecko</figcaption>
                         </figure>
                     </a>
                     <a href="https://twitter.com/">
@@ -58,6 +58,12 @@
                             <figcaption>nextdoor</figcaption>
                         </figure>
                     </a>
+                    <a href="https://www.worldometers.info/coronavirus/country/us/">
+                        <figure>
+                            <img src="images/worldometer.png" alt="worldometer Icon">
+                            <figcaption>WorldoMeter</figcaption>
+                        </figure>
+                    </a>
                     <a href="https://www.youtube.com/">
                         <figure>
                             <img src="images/youtube.png" alt="youtube Icon">
@@ -75,12 +81,6 @@
                         <figure>
                             <img src="images/duolingo.png" alt="duolingo Icon">
                             <figcaption>duolingo</figcaption>
-                        </figure>
-                    </a>
-                    <a href="https://www.codecademy.com">
-                        <figure>
-                            <img src="images/codecademy.png" alt="codecademy Icon">
-                            <figcaption>codecademy</figcaption>
                         </figure>
                     </a>
                     <a href="https://www.vocabulary.com">
@@ -112,18 +112,6 @@
                         <figure>
                             <img src="images/iCloud.png" alt="icloud Icon">
                             <figcaption>iCloud</figcaption>
-                        </figure>
-                    </a>
-                    <a href="https://www.ifttt.com">
-                        <figure>
-                            <img src="images/ifttt.png" alt="ifttt Icon">
-                            <figcaption>ifttt</figcaption>
-                        </figure>
-                    </a>
-                    <a href="https://www.pinboard.in">
-                        <figure>
-                            <img src="images/pinboard.png" alt="Pinboard Icon">
-                            <figcaption>Pinboard</figcaption>
                         </figure>
                     </a>
                     <a href="https://app.plex.tv/desktop#">
@@ -168,6 +156,24 @@
                         <figure>
                             <img src="images/gmaps.png" alt="Goggle Maps Icon">
                             <figcaption>GMaps</figcaption>
+                        </figure>
+                    </a>
+                    <a href="https://www.hikingproject.com/directory/8010742/washington">
+                        <figure>
+                            <img src="images/hikingproject.png" alt="Hiking Project Icon">
+                            <figcaption>Hiking Project</figcaption>
+                        </figure>
+                    </a>
+                    <a href="https://www.trailforks.com/">
+                        <figure>
+                            <img src="images/trailforks.png" alt="Trail Forks Icon">
+                            <figcaption>Trail Forks</figcaption>
+                        </figure>
+                    </a>
+                    <a href="https://caltopo.com/map.html#ll=47.26805,-120.16296&z=7&b=mbt">
+                        <figure>
+                            <img src="images/caltopo.png" alt="Caltopo Icon">
+                            <figcaption>Caltopo</figcaption>
                         </figure>
                     </a>
                     <a href="https://wikipedia.org/">
@@ -247,6 +253,12 @@
                         <figure>
                             <img src="images/vscode.png" alt="VS Code Icon">
                             <figcaption>VS Code</figcaption>
+                        </figure>
+                    </a>
+                    <a href="https://vimawesome.com/">
+                        <figure>
+                            <img src="images/vimawesome.png" alt="Vim Awesome Icon">
+                            <figcaption>Vim Awesome</figcaption>
                         </figure>
                     </a>
                     <a href="https://brew.sh">
