Link Icon Changes

--- a/link/index.html
+++ b/link/index.html
@@ -30,7 +30,7 @@
                     </a>
                     <a href="https://www.accuweather.com/en/us/issaquah/98027/weather-forecast/346384">
                         <figure>
-                            <img src="images/accuweather.png" alt="accuweather Icon">
+                            <img src="images/accuweatherwa.png" alt="accuweather Icon">
                             <figcaption>AccuWeather</figcaption>
                         </figure>
                     </a>
@@ -62,12 +62,6 @@
                         <figure>
                             <img src="images/worldometer.png" alt="worldometer Icon">
                             <figcaption>WorldoMeter</figcaption>
-                        </figure>
-                    </a>
-                    <a href="https://www.youtube.com/">
-                        <figure>
-                            <img src="images/youtube.png" alt="youtube Icon">
-                            <figcaption>YouTube</figcaption>
                         </figure>
                     </a>
                     <div class="space"></div>
@@ -114,10 +108,28 @@
                             <figcaption>iCloud</figcaption>
                         </figure>
                     </a>
-                    <a href="https://app.plex.tv/desktop#">
+                    <a href="https://www.smugmug.com/app/organize/">
                         <figure>
-                            <img src="images/plex.png" alt="plex app Icon">
-                            <figcaption>Plex App</figcaption>
+                            <img src="images/smugmug.png" alt="Smugmug Icon">
+                            <figcaption>Smugmug</figcaption>
+                        </figure>
+                    </a>
+                    <a href="https://mail.protonmail.com/inbox">
+                        <figure>
+                            <img src="images/protonmail.png" alt="Proton Mail Icon">
+                            <figcaption>ProtonMail</figcaption>
+                        </figure>
+                    </a>
+                    <a href="https://www.patreon.com">
+                        <figure>
+                            <img src="images/patreon.png" alt="Patreon Icon">
+                            <figcaption>Patreon</figcaption>
+                        </figure>
+                    </a>
+                    <a href="https://www.grammarly.com/">
+                        <figure>
+                            <img src="images/grammarly.png" alt="Grammary Icon">
+                            <figcaption>Grammary</figcaption>
                         </figure>
                     </a>
                     <a href="https://www.getcloudapp.com">
@@ -126,17 +138,10 @@
                             <figcaption>CloudApp</figcaption>
                         </figure>
                     </a>
-                     <div class="space"></div>
                     <a href="https://www.amazon.com/">
                         <figure>
                             <img src="images/amazon.png" alt="Amazon Icon">
                             <figcaption>Amazon</figcaption>
-                        </figure>
-                    </a>
-                    <a href="https://www.amazon.com/b/ref=lp_2676882011_nav_shopall_aiv_piv?rh=i%3Aprime-instant-video%2Cn%3A2676882011&ie=UTF8&node=2676882011">
-                        <figure>
-                            <img src="images/amazonvideo.png" alt="Amazon Video Icon">
-                            <figcaption>aVideo</figcaption>
                         </figure>
                     </a>
                     <a href="https://www.rei.com/">
@@ -149,6 +154,43 @@
                         <figure>
                             <img src="images/newegg.png" alt="newegg Icon">
                             <figcaption>Newegg</figcaption>
+                        </figure>
+                    </a>
+                     <div class="space"></div>
+                    <a href="https://app.plex.tv/desktop#">
+                        <figure>
+                            <img src="images/plex.png" alt="plex app Icon">
+                            <figcaption>Plex App</figcaption>
+                        </figure>
+                    </a>
+                    <a href="https://www.youtube.com/">
+                        <figure>
+                            <img src="images/youtube.png" alt="youtube Icon">
+                            <figcaption>YouTube</figcaption>
+                        </figure>
+                    </a>
+                    <a href="https://www.disneyplus.com/">
+                        <figure>
+                            <img src="images/disneyplus.png" alt="Disney Plus Icon">
+                            <figcaption>DisneyPlus</figcaption>
+                        </figure>
+                    </a>
+                    <a href="https://www.hulu.com/">
+                        <figure>
+                            <img src="images/hulu.png" alt="Hulu Icon">
+                            <figcaption>Hulu</figcaption>
+                        </figure>
+                    </a>
+                    <a href="https://www.espn.com/watch/espnplus">
+                        <figure>
+                            <img src="images/espn.png" alt="ESPN Icon">
+                            <figcaption>ESPN</figcaption>
+                        </figure>
+                    </a>
+                    <a href="https://www.amazon.com/b/ref=lp_2676882011_nav_shopall_aiv_piv?rh=i%3Aprime-instant-video%2Cn%3A2676882011&ie=UTF8&node=2676882011">
+                        <figure>
+                            <img src="images/amazonvideo.png" alt="Amazon Video Icon">
+                            <figcaption>PrimeVideo</figcaption>
                         </figure>
                     </a>
                     <div class="space"></div>
@@ -271,6 +313,12 @@
                         <figure>
                             <img src="images/python.png" alt="Python Icon">
                             <figcaption>Python</figcaption>
+                        </figure>
+                    </a>
+                    <a href="https://cli.github.com/manual/">
+                        <figure>
+                            <img src="images/githubcli.png" alt="Github CLI Icon">
+                            <figcaption>Github CLI</figcaption>
                         </figure>
                     </a>
                     <a href="https://shd101wyy.github.io/markdown-preview-enhanced/#/">
